--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,9 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
   min-height: 100vh;
   font-family: var(--font-family);
@@ -7,4 +13,22 @@ body {
   max-width: 1254px;
   margin: 0 auto;
   padding: 0 15px;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+img {
+  height: auto;
+  object-fit: cover;
+  max-width: 100%;
+}
+
+.list-reset {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+
 }
