--- a/src/components/Auth/Auth.css
+++ b/src/components/Auth/Auth.css
@@ -31,6 +31,7 @@
   display: flex;
   flex-direction: column;
   gap: 17px;
+  margin: auto 0;
 }
 
 .auth__field {
@@ -45,6 +46,8 @@
   height: 26px;
   border: none;
   border-bottom: 1px solid black;
+  padding: 20px 5px;
+  font-size: 20px;
 }
 
 .auth__btn {
