--- a/src/components/TaskList/TaskList.css
+++ b/src/components/TaskList/TaskList.css
@@ -19,3 +19,29 @@
   align-items: center;
 }
 
+.tasks-list {
+  padding: 0;
+  margin: 0;
+}
+
+.tasks-list__task {
+  padding: 16px;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  border-radius: 8px;
+  min-height: 75px;
+}
+
+
+.list-task__title {
+  font-weight: 400;
+  font-size: 25px;
+  color: #000;
+}
+
+.list-task__checkbox {
+  width: 30px;
+  height: 30px;
+}
+
