--- a/src/components/Aside/Aside.css
+++ b/src/components/Aside/Aside.css
@@ -112,13 +112,36 @@
   font-size: 21px;
 }
 
+.react-calendar button:hover {
+  background-color: #ADF7B6 !important;
+  opacity: 0.65;
+}
+
+.react-calendar__tile--now {
+  background-color: rgb(139, 130, 167);
+}
+
+/* .react-calendar__tile--now:hover {
+  background-color: red !important;
+  opacity: 0.9;
+} */
+
 .react-calendar__tile--active  {
   background-color: #ADF7B6;
+
+}
+
+.react-calendar__tile--active {
+  background-color: #ADF7B6 !important;
 
 }
 
 .react-calendar__month-view__weekdays__weekday {
   padding: 0.5em;
   font-size: 16px;
+}
+
+.react-calendar__tile {
+  padding: 15px;
 }
 
