--- a/src/components/TaskModal/TaskModal.css
+++ b/src/components/TaskModal/TaskModal.css
@@ -62,14 +62,15 @@
   border-radius: 5px;
   padding: 15px;
   cursor: pointer;
+  font-size: 22px;
 }
 
 .task-modal__delete {
   background-color: transparent;
   border: none;
   cursor: pointer;
-  width: 35px;
-  height: 35px;
+  width: 50px;
+  height: 50px;
 
 }
 
