--- a/src/components/CreateTask/CreateTask.css
+++ b/src/components/CreateTask/CreateTask.css
@@ -12,6 +12,18 @@
   color: #212529;
 }
 
+.new-task__btn-back {
+  margin: 0;
+  padding: 0;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  position: absolute;
+  top: 41px;
+  right: 24px;
+  transform: translate(-50%);
+}
+
 .new-task__fields {
     display: flex;
     flex-direction: column;
@@ -25,7 +37,7 @@
   width: 100%;
   padding: 16px;
   min-height: 56px;
-  background: #f8f9fa;
+  /* background: #f8f9fa; */
 }
 
 .new-task__input {
