--- a/src/components/CreateTask/CreateTask.css
+++ b/src/components/CreateTask/CreateTask.css
@@ -173,3 +173,20 @@
   justify-content: center;
   cursor: pointer;
 }
+
+
+@media(max-width: 768px) {
+  .new-task__colors {
+    flex-wrap: wrap;
+  }
+
+  .task-tag__filters {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .new-task__btn {
+    bottom: 8%;
+    right: 4%
+  }
+}
