--- a/src/pages/MainAppPage/MainAppPage.css
+++ b/src/pages/MainAppPage/MainAppPage.css
@@ -88,3 +88,48 @@
   display: flex;
   flex-direction: column;
 }
+
+@media(max-width: 768px) {
+  .react-calendar__tile {
+    padding: 50px 52px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .react-calendar button {
+    font-size: 49px;
+  }
+
+
+}
+
+
+@media(max-width: 650px) {
+  .react-calendar__tile {
+    padding: 40px 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .react-calendar button {
+    font-size: 38px;
+  }
+}
+
+
+@media(max-width: 440px) {
+  .react-calendar__tile {
+    padding: 30px 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .react-calendar button {
+    font-size: 28px;
+  }
+
+
+}
