add adaptive + styles(ready to delpoy in check it)

--- a/src/components/Aside/Aside.css
+++ b/src/components/Aside/Aside.css
@@ -171,6 +171,12 @@
   
 } */
 
+@media(max-width: 1200px) {
+  .aside {
+    max-width: 350px;
+  }
+}
+
 @media(max-width: 768px) {
   .aside {
     display: none;
